// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceConnectPortEntryTest renders with needsValidation = false 1`] = `
<div
  className="device-connect-port-entry"
>
  <h3>
    Android device port number
  </h3>
  <MaskedTextField
    ariaLabel="Port number"
    className="port-number-field"
    mask="99999"
    maskChar=""
    maskFormat={
      Object {
        "*": /\\[a-zA-Z0-9\\]/,
        "9": /\\[0-9\\]/,
        "a": /\\[a-zA-Z\\]/,
      }
    }
    onChange={[Function]}
    placeholder="12345"
  />
  <Button
    className="button-validate-port"
    disabled={true}
    onClick={[Function]}
    primary={false}
  >
    Validate port number
  </Button>
</div>
`;

exports[`DeviceConnectPortEntryTest renders with needsValidation = true 1`] = `
<div
  className="device-connect-port-entry"
>
  <h3>
    Android device port number
  </h3>
  <MaskedTextField
    ariaLabel="Port number"
    className="port-number-field"
    mask="99999"
    maskChar=""
    maskFormat={
      Object {
        "*": /\\[a-zA-Z0-9\\]/,
        "9": /\\[0-9\\]/,
        "a": /\\[a-zA-Z\\]/,
      }
    }
    onChange={[Function]}
    placeholder="12345"
  />
  <Button
    className="button-validate-port"
    disabled={true}
    onClick={[Function]}
    primary={true}
  >
    Validate port number
  </Button>
</div>
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "" 1`] = `
Object {
  "port": "",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "" 2`] = `
Object {
  "port": "",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "111" 1`] = `
Object {
  "port": "",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "111" 2`] = `
Object {
  "port": "111",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "null" 1`] = `
Object {
  "port": "",
}
`;

exports[`DeviceConnectPortEntryTest user interaction change port number handles port text = "null" 2`] = `
Object {
  "port": null,
}
`;
